test/data/semantic-errors/type-mismatch-at-assignment.jen
x := 3
x = "not three"
